# backend

./: Cargo.toml  database.erd.json  db.md  readme.md  station_service.md  stations.md  users.md
api/: Cargo.toml
database_api/: Cargo.toml  build_station_service.sh  services.json
database_api/api/: Cargo.toml
database_api/api/src/: main.rs  services.rs
database_api/db/: Cargo.toml
database_api/db/src/: lib.rs
database_api/db/src/models/: connection.rs  mod.rs  orders.rs
database_api/employess_service/: Cargo.toml
database_api/employess_service/data/: data.json
database_api/employess_service/src/: employee.rs  main.rs  metro_path.rs  workers.rs
database_api/employess_service/src/api/: error.rs  services.rs
database_api/gateway/: Cargo.toml
database_api/gateway/requests_test/: forwarding.http  register.http  services_list.http  update_tokens.http
database_api/gateway/requests_test/auth/: auth_go_service.http  is_authentificated.http  login_213.http  update_key.http
database_api/gateway/requests_test/go/: test_forwarding.http
database_api/gateway/requests_test/subway/: nearest.http  stations.http
database_api/gateway/src/: authentification.rs  body_helpers.rs  cors.rs  error.rs  jwt.rs  main.rs  registry.rs
database_api/metro_data_extractor/: Cargo.toml
database_api/metro_data_extractor/src/: lib.rs
database_api/order_service/: Cargo.toml
database_api/order_service/src/: employees.rs  error.rs  main.rs  operations.rs  order.rs
database_api/service_registrator/: Cargo.toml
database_api/service_registrator/src/: lib.rs
database_api/station_service/: Cargo.toml
database_api/station_service/data/: names.json
database_api/station_service/data/by_task/: metro_stations_name.json
database_api/station_service/src/: draw.rs  lib.rs  main.rs  metro_graph.rs  operations.rs  station.rs
database_api/station_service/src/api/: mod.rs  server.rs
db/: metro.db
db_loader/: Go - SQLite.url  data-1488-2024-05-06.json  data.json  data2.json  employees.json  fio.txt  go.mod  go.sum  golang и sqlite - Поиск в Google.url  main.go  metro.db  Генератор Случайных Имён, Фамилий и Отчества.url
db_scheme/: database.erd.json  db.md  users.md
docs/: Презентация Microsoft PowerPoint.pptx  Техническое описание проекта.docx
dtservice1/: .gitignore  consts.go  deleteEmployee.go  deleteOrder.go  deletePassenger.go  getAccount.go  getAccountExist.go  getCategoryList.go  getEmployeeList.go  getOrderList.go  getOrderState.go  getPassenger.go  getPassengerList.go  getRankList.go  getRoleList.go  getUchastokList.go  getWorkdayDateList.go  getWorkdayList.go  init.json  init.sh  main.go  metro.db  postAccountSet.go  postCategorySet.go  postEmployeeSet.go  postEmployeeUpdate.go  postOrderSet.go  postOrderUpdate.go  postPassengerSet.go  postPassengerUpdate.go  postWorkdaySet.go  postWorkdayUpdate.go  readme.md
dtservice1/postman/: HackatonMICTask8_ServerAPI.postman_collection.json  HackatonMICTask8_ServerAPI_.postman_collection.json
metro_map_data/: data-1488-2024-05-06.json
rust_services/: Cargo.toml  build_station_service.sh  services.json
rust_services/db/src/models/: connection.rs  operations.rs
rust_services/gateway/: Cargo.toml
rust_services/gateway/requests_test/: register.http
rust_services/gateway/requests_test/auth/: auth_gateway_service.http  login.http
rust_services/gateway/requests_test/go/: test_forwarding.http
rust_services/gateway/requests_test/subway/: path.http
rust_services/gateway/src/: cors.rs  jwt.rs  main.rs  rate_limiter.rs  registry.rs  request.rs
rust_services/order_service/: Cargo.toml  database.sq3
rust_services/order_service/requests/: find.http  orders.http  orders_2013.http  req_order.http  req_order_213.http  worker_list.http
rust_services/order_service/src/: employees.rs  error.rs  main.rs  operations.rs  order.rs  work_day.rs
rust_services/order_service/src/api/: layers.rs  mod.rs  response.rs  server.rs  services.rs
rust_services/order_service/src/db/: employees_table.rs  mod.rs  orders_table.rs  requests_table.rs  workers_table.rs
rust_services/order_service/src/http/: client.rs  mod.rs
rust_services/station_service/: map.json  map2.json
rust_services/station_service/data/by_task/: metro_walk_time.json
rust_services/station_service/src/: metro_graph.rs  nearest.rs  station.rs
sseservice/: .gitignore  consts.go  data.json  main.go  metro.db
