[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum= {version = "0.7.5", features = ["ws", "headers"]}
tower="0.4.13"
hyper= {version="1.3.1"}
tower-http = {version = "0.5.2", features = ["cors", "fs", "trace"]}
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread", "test-util"] }
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"
logger = {path = "../../../rust/format/format_struct/logger"}
medo_settings = {path = "../medo_settings"}
medo_db = {path = "../medo_db"}