[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.3.1", features = ["full"] }
tower = {version = "0.4.13", features = ["full"]}
tower-http= {version = "0.5.2", features = ["cors"]}
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread", "test-util"] }
serde = "1.0.203"
hyper-tls = {version = "0.6.0"}
hyper-util = {version = "0.1.5", features = ["client-legacy", "client", "full"]}
http-body-util="0.1.1"
serde_json = "1.0.117"
jsonwebtoken = {version = "9.3.0"}
ring = { version = "0.17.8", features = ["std"] }
consul = "0.4.2"
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}
thiserror="*"
once_cell="*"
time="*"