[package]
name = "metro_data_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustworkx-core = {git = "https://github.com/Qiskit/rustworkx", version = "0.15.0"}
serde="*"
serde_json="1.0.117"
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}