[package]
name = "service_registrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.3.1", features = ["full"] }
tower = "0.4.13"
tokio = { version = "1.38.0", features = ["full"] }
serde = "1.0.203"
hyper-tls = {version = "0.6.0"}
hyper-util = {version = "0.1.5", features = ["client-legacy", "client", "full"]}
http-body-util="0.1.1"
serde_json = "1.0.117"
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}
anyhow = "*"