[package]
name = "station_service"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde="*"
serde_derive="*"
serde_json="1.0.117"
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
petgraph = {version ="0.6.5", features = ["serde-1"]}
plotters= {version ="0.3.6", default_features = false, features = ["evcxr"]}
once_cell="*"


axum= {version = "0.7.5", features = ["ws"]}
#axum-macros="0.4.1"
tower="0.4.13"
hyper= {version="1.3.1"}
tower-http = {version = "0.5.2", features = ["cors", "fs", "trace"]}
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread", "test-util"] }
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
service_registrator = { path="../service_registrator" }